...
        val realSyncService = BluetoothSyncService(this, { json ->
            viewModel.importFromJson(json)
        }, bluetoothAdapter)

        viewModel.setSyncService(realSyncService)
        viewModel.selectTable(1, "Max")
        viewModel.selectTable(2, "Anna")
        viewModel.selectTable(8, "Lisa")
        viewModel.selectTable(12, "Claire")
        viewModel.selectTable(20, "Bob")

        setContent {
            val navController = rememberNavController()
...
